# ros_dvl_a50_driver

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: industrial-ci.yml  semrel.yml
config/: ros_dvl_a50_driver_config.yaml
include/ros_dvl_a50_driver/: ros_node.hpp  ros_translator.hpp
include/ros_dvl_a50_driver/lib/: parser.hpp  tcp_client.hpp  types.hpp
include/ros_dvl_a50_driver/ros/: ros_node.hpp  ros_translator.hpp
launch/: ros_dvl_a50_driver.launch.py
lib/: CMakeLists.txt
lib/include/: driver.hpp  types.hpp
lib/src/: driver.cpp
src/: CMakeLists.txt  main.cpp  ros_node.cpp  ros_translator.cpp
src/lib/: CMakeLists.txt  parser.cpp  tcp_client.cpp
src/ros/: CMakeLists.txt  main.cpp  ros_node.cpp  ros_translator.cpp
