<?xml version="1.0"?>
<package format="2">
  <name>ros_dvl_a50_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for the DVL A50</description>
  <maintainer email="detoxte@gmail.com">Christopher Strøm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>boost</depend>
  <depend>vortex_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
